Car card component Private layout and user menu

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -4,5 +4,8 @@
   "login.password": "Password",
   "login.remember": "Remember me",
   "login.forgot": "Forgot password?",
-  "login.signup": "Don't have an account? Sign Up"
+  "login.signup": "Don't have an account? Sign Up",
+  "toolbar.text": "Jaguar Garage",
+  "usermenu.settings": "Settings",
+  "usermenu.logout": "Logout"
 }
