--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -4,5 +4,8 @@
   "login.password": "Contraseña",
   "login.remember": "Recordarme",
   "login.forgot": "¿Has olvidado tu contraseña?",
-  "login.signup": "¿No tienes una cuenta? Registrate"
+  "login.signup": "¿No tienes una cuenta? Registrate",
+  "toolbar.text": "Garaje Jaguar",
+  "usermenu.settings": "Ajustes",
+  "usermenu.logout": "Desconectar"
 }
