Add car form and dynamic types

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -5,12 +5,23 @@
   "login.remember": "Remember me",
   "login.forgot": "Forgot password?",
   "login.signup": "Don't have an account? Sign Up",
-  "toolbar.text": "Jaguar Garage",
+  "toolbar.text": "Garage",
   "usermenu.settings": "Settings",
   "usermenu.logout": "Logout",
   "card.edit": "Edit",
   "card.delete": "Delete",
   "card.confirm.message": "Are you sure you want to delete record?",
   "card.confirm.accept": "Delete",
-  "card.confirm.cancel": "Cancel"
+  "card.confirm.cancel": "Cancel",
+  "add.title": "New car registration",
+  "add.favorite": "Favorite",
+  "add.make": "Make",
+  "add.model": "Model",
+  "add.drive": "Drive",
+  "add.fuel": "Fuel type",
+  "add.year": "Year",
+  "add.trany": "Gearbox",
+  "add.gears": "Gears",
+  "add.cancel": "Cancel",
+  "add.accept": "Save"
 }
