--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -5,12 +5,23 @@
   "login.remember": "Recordarme",
   "login.forgot": "¿Has olvidado tu contraseña?",
   "login.signup": "¿No tienes una cuenta? Registrate",
-  "toolbar.text": "Garaje Jaguar",
+  "toolbar.text": "Garaje",
   "usermenu.settings": "Ajustes",
   "usermenu.logout": "Desconectar",
   "card.edit": "Editar",
   "card.delete": "Borrar",
   "card.confirm.message": "¿Estás seguro que deseas borrar el registro?",
   "card.confirm.accept": "Borrar",
-  "card.confirm.cancel": "Cancelar"
+  "card.confirm.cancel": "Cancelar",
+  "add.title": "Alta de nuevo coche",
+  "add.favorite": "Favorito",
+  "add.make": "Marca",
+  "add.model": "Modelo",
+  "add.drive": "Tracción",
+  "add.fuel": "Combustible",
+  "add.year": "Año",
+  "add.trany": "Cambio",
+  "add.gears": "Marchas",
+  "add.cancel": "Cancelar",
+  "add.accept": "Guardar"
 }
