Create and modify car. Change language functionality

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -6,14 +6,18 @@
   "login.forgot": "Forgot password?",
   "login.signup": "Don't have an account? Sign Up",
   "toolbar.text": "Garage",
-  "usermenu.settings": "Settings",
+  "usermenu.language": "Language",
+  "usermenu.es": "Spanish",
+  "usermenu.en": "English",
   "usermenu.logout": "Logout",
+  "grid.favorite": "Favorites",
   "card.edit": "Edit",
   "card.delete": "Delete",
   "card.confirm.message": "Are you sure you want to delete record?",
   "card.confirm.accept": "Delete",
   "card.confirm.cancel": "Cancel",
-  "add.title": "New car registration",
+  "add.title.new": "New car registration",
+  "add.title.edit": "Edit car data",
   "add.favorite": "Favorite",
   "add.make": "Make",
   "add.model": "Model",
