--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -6,14 +6,18 @@
   "login.forgot": "¿Has olvidado tu contraseña?",
   "login.signup": "¿No tienes una cuenta? Registrate",
   "toolbar.text": "Garaje",
-  "usermenu.settings": "Ajustes",
+  "usermenu.language": "Idioma",
+  "usermenu.es": "Español",
+  "usermenu.en": "Inglés",
   "usermenu.logout": "Desconectar",
+  "grid.favorite": "Favoritos",
   "card.edit": "Editar",
   "card.delete": "Borrar",
   "card.confirm.message": "¿Estás seguro que deseas borrar el registro?",
   "card.confirm.accept": "Borrar",
   "card.confirm.cancel": "Cancelar",
-  "add.title": "Alta de nuevo coche",
+  "add.title.new": "Alta de nuevo coche",
+  "add.title.edit": "Editar datos del coche",
   "add.favorite": "Favorito",
   "add.make": "Marca",
   "add.model": "Modelo",
