Login and Car forms with validations

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -5,6 +5,12 @@
   "login.remember": "Remember me",
   "login.forgot": "Forgot password?",
   "login.signup": "Don't have an account? Sign Up",
+  "validation.required": "Required field",
+  "validation.invalid": "Invalid field",
+  "validation.min.year": "The year must be greater than 1886",
+  "validation.max.year": "The year cannot exceed the current",
+  "validation.min.gears": "Minimum 1 gear",
+  "validation.max.gear": "Maximum 9 gears",
   "toolbar.text": "Garage",
   "usermenu.language": "Language",
   "usermenu.es": "Spanish",
