--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -5,6 +5,12 @@
   "login.remember": "Recordarme",
   "login.forgot": "¿Has olvidado tu contraseña?",
   "login.signup": "¿No tienes una cuenta? Registrate",
+  "validation.required": "Campo obligatorio",
+  "validation.invalid": "Campo invalido",
+  "validation.min.year": "El año debe ser superior a 1886",
+  "validation.max.year": "El año no puede exeder al actual",
+  "validation.min.gears": "Mínimo 1 marcha",
+  "validation.max.gear": "Máximo 9 marchas",
   "toolbar.text": "Garaje",
   "usermenu.language": "Idioma",
   "usermenu.es": "Español",
